# solana-programs-list

./: .gitignore  .gitmodules  CONTRIBUTING.md  PROGRAMS.md  README.md
anchor-arcium-hello-world/: README.md
anchor-coinflip/: Anchor.toml  Cargo.toml  package.json
anchor-coinflip/tests/: coinflip.ts
anchor-collateral-stablecoin/: Anchor.toml  README.md  package.json  txtx.yml
anchor-collateral-stablecoin/runbooks/: README.md
anchor-collateral-stablecoin/tests/: collateral-stablecoin.ts
anchor-cpi/: README.md
anchor-dicepool-game/: Anchor.toml  README.md
anchor-dicepool-game/programs/dicepool/: Cargo.toml
anchor-dicepool-game/programs/dicepool/src/: error.rs  lib.rs
anchor-dicepool-game/programs/dicepool/src/instructions/: claimbet.rs  create_pool.rs  mod.rs  place_bet.rs  set_result.rs  withdraw_all.rs
anchor-dicepool-game/programs/dicepool/src/state/: state.rs
anchor-dicepool-game/tests/: dicepool.ts
anchor-merkle-tree/: Anchor.toml  holders.json  output.json  package.json  tsconfig.json
anchor-merkle-tree/programs/anchor-merkle-tree/: Cargo.toml
anchor-merkle-tree/programs/anchor-merkle-tree/src/: errors.rs  lib.rs  merkle.rs  state.rs
anchor-merkle-tree/programs/anchor-merkle-tree/src/instructions/: claim_winner.rs  close_lottery.rs  commit_randomness.rs  initialize_lottery.rs  mod.rs  reveal_randomness.rs  set_vrf_result.rs
native-cpi-basic/: README.md
quasar-counter/: Cargo.toml  Quasar.toml
quasar-escrow/: Cargo.toml  Quasar.toml
quasar-hello-world/: Quasar.toml  README.md
quasar_hello_world/: Cargo.toml
(+37 files in other folders)
